--- a/CarsBusiness.Persistence/CarsBusiness.Persistence.csproj
+++ b/CarsBusiness.Persistence/CarsBusiness.Persistence.csproj
@@ -7,7 +7,16 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CarsBusiness.Services\CarsBusiness.Services.csproj" />
+      <ProjectReference Include="..\CarsBusiness.Abstractions\CarsBusiness.Abstractions.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.8" />
+      <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.8">
+        <PrivateAssets>all</PrivateAssets>
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      </PackageReference>
     </ItemGroup>
 
 </Project>
