--- a/CarsBusiness.Services/CarsBusiness.Services.csproj
+++ b/CarsBusiness.Services/CarsBusiness.Services.csproj
@@ -7,7 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\CarsBusiness.Abstractions\CarsBusiness.Abstractions.csproj" />
+      <ProjectReference Include="..\CarsBusiness.Persistence\CarsBusiness.Persistence.csproj" />
     </ItemGroup>
 
 </Project>
