--- a/CarsBusiness.WebApi/appsettings.json
+++ b/CarsBusiness.WebApi/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost,1433;Database=CarsBiz;User Id=sa;Password=Mikeldev_123#;Encrypt=True;TrustServerCertificate=True;"
+},
   "Logging": {
     "LogLevel": {
       "Default": "Information",
