--- a/CarsBusiness.Services/CarsBusiness.Services.csproj
+++ b/CarsBusiness.Services/CarsBusiness.Services.csproj
@@ -10,4 +10,9 @@
       <ProjectReference Include="..\CarsBusiness.Persistence\CarsBusiness.Persistence.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+      <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.8" />
+    </ItemGroup>
+
 </Project>
